--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,6 @@ services:
     image: huangyingw/mysql
     network_mode: "host"
     restart: always
+    env_file: .env
     volumes:
       - ./var/log/:/var/log/
-    command: /bin/sh -c "/run.sh > /var/log/containner.log 2>&1"
