--- a/docker-compose.ubuntu.yml
+++ b/docker-compose.ubuntu.yml
@@ -1,8 +1,9 @@
 version: '2'
 services:
   mysql:
-    context: ./5.7/
-    dockerfile: Dockerfile-ubuntu
+    build:
+      context: ./5.7/
+      dockerfile: Dockerfile-ubuntu
     image: huangyingw/mysql
     network_mode: "host"
     env_file: .env
