--- a/5.7/Dockerfile-ubuntu
+++ b/5.7/Dockerfile-ubuntu
@@ -6,23 +6,20 @@ RUN groupadd -r mysql && useradd -r -g mysql mysql
 RUN mkdir /docker-entrypoint-initdb.d
 RUN locale-gen en_US.UTF-8  
 
-# gpg: key 5072E1F5: public key "MySQL Release Engineering <mysql-build@oss.oracle.com>" imported
-RUN apt-key adv --keyserver ha.pool.sks-keyservers.net --recv-keys A4A9406876FCBD3C456770C88C718D3B5072E1F5
+COPY ./debs/ /debs
 
-ENV MYSQL_MAJOR 5.7
-ENV MYSQL_VERSION 5.7.11-1debian8
-
-RUN echo "deb http://repo.mysql.com/apt/ubuntu/ trusty mysql-${MYSQL_MAJOR}" > /etc/apt/sources.list.d/mysql.list
-
-# the "/var/lib/mysql" stuff here is because the mysql-server postinst doesn't have an explicit way to disable the mysql_install_db codepath besides having a database already "configured" (ie, stuff in /var/lib/mysql/mysql)
-# also, we set debconf keys to make APT a little quieter
 RUN { \
 echo mysql-community-server mysql-community-server/data-dir select ''; \
 echo mysql-community-server mysql-community-server/root-pass password ''; \
 echo mysql-community-server mysql-community-server/re-root-pass password ''; \
 echo mysql-community-server mysql-community-server/remove-test-db select false; \
 } | debconf-set-selections \
-&& apt-get update && apt-get install -y mysql-server && rm -rf /var/lib/mysql && mkdir -p /var/lib/mysql
+&& apt-get update \
+&& apt-get install -y apparmor-utils libmecab2 psmisc libaio1 \
+&& dpkg -i /debs/mysql-common_5.7.12-1ubuntu14.04_amd64.deb \
+&& dpkg -i /debs/mysql-community-client_5.7.12-1ubuntu14.04_amd64.deb \
+&& dpkg -i /debs/mysql-client_5.7.12-1ubuntu14.04_amd64.deb \
+&& dpkg -i /debs/mysql-community-server_5.7.12-1ubuntu14.04_amd64.deb 
 
 # comment out a few problematic configuration values
 # don't reverse lookup hostnames, they are usually another container
