--- a/5.7/Dockerfile-ubuntu
+++ b/5.7/Dockerfile-ubuntu
@@ -30,6 +30,7 @@ RUN sed -Ei 's/^(bind-address|log)/#&/' /etc/mysql/my.cnf \
 VOLUME /var/lib/mysql
 
 COPY localdb-run.sh /localdb-run.sh
+COPY docker-entrypoint.sh /entrypoint.sh
 ENTRYPOINT ["/localdb-run.sh"]
 
 EXPOSE 3306
